--- a/WebView/Info.plist
+++ b/WebView/Info.plist
@@ -44,5 +44,7 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>图片写入相册</string>
 </dict>
 </plist>
